--- a/.github/workflows/run-tests-ci.yml
+++ b/.github/workflows/run-tests-ci.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           node-version: 'lts/*'
           cache: 'npm'
-          
+
       - run: npm cache clean --force
 
       - run: npm ci || npm install
 
-      - run: npm run test
+      - run: npm run test:unitary
