--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:unit": "vitest run --project unit",
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
-    "test:e2e": "vitest run --dir src/http",
+    "test:e2e": "vitest run --project e2e",
     "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
