--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run-e2e-tests:
-    name: Run E2E Tests
+    name: Run E2E Tests Project
     runs-on: ubuntu-latest
 
     services:
